chore: update tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src",
-    "src/declaration.d.ts"
+    "src"
   ],
   "references": [
     {
