--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
+    "react-super-responsive-table": "^5.2.2",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
@@ -48,5 +50,11 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-svgr": "^4.1.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,md}": [
+      "eslint --fix --cache --cache-location './node_modules/.cache/.eslintcache' --max-warnings 0",
+      "prettier --write --cache ."
+    ]
   }
 }
