--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "format": "prettier . --write",
     "pre-commit": "npx tsc --noEmit && npm run lint && npm run format",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "server": "json-server --watch db.json --port 50000"
   },
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.6.2",
+    "daisyui": "^4.4.18",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
@@ -24,6 +28,7 @@
   "devDependencies": {
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/plugin-svgo": "^8.1.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -44,6 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
+    "json-server": "^0.17.4",
     "lint-staged": "^15.0.2",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
