--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.8.0",
     "react-super-responsive-table": "^5.2.2",
     "tailwind-merge": "^1.14.0"
   },
