--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-pdf": "^7.5.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.20.1",
     "react-super-responsive-table": "^5.2.2",
-    "tailwind-merge": "^1.14.0"
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@svgr/plugin-jsx": "^8.1.0",
